@@ -5,6 +5,8 @@
    ccoors.
 3. Fix Community Radio Browser search.
 4. Remove dirble from radio section, as its no longer active.
+5. Better handling of CUE tracks when MPD is set to list as directory.
+6. Disable CUE parsing in cantata by default, as MPD handles this better now.
 
 2.4.2
 -----
